# screen-observer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  types.rs
src/backends/: mock.rs  mod.rs  screenpipe.rs
src/backends/native/: capture.rs  frame_diff.rs  mod.rs  ocr.rs  permissions.rs  window_info.rs
