[package]
name = "screen-observer"
version = "0.1.0"
edition = "2021"
description = "A trait-based abstraction for desktop screen observation with pluggable backends"
license = "MIT"
repository = "https://github.com/scka-de/screen-observer"

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = { version = "0.24", optional = true }
core-foundation = { version = "0.10", optional = true }

[features]
default = []
# Native macOS screen capture backend (macOS only).
# Enables direct screen capture via CGWindowList + Apple Vision OCR.
native = ["dep:core-graphics", "dep:core-foundation"]
